Fix box spacing on home page

--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -11,7 +11,7 @@
 
 .home{
   &-container {
-    margin: 60px 0;
+    margin:  0;
     width: 100%;
   }
   &-hero-image {
@@ -24,12 +24,13 @@
     background-repeat: no-repeat;
     background-position: top center;
     z-index: 10;
+    position: relative;
   }
   &-content {
     width: 100%;
     max-width: 1079px;
     box-sizing: border-box;
-    margin: -140px auto;
+    margin: 0px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -382,10 +383,14 @@
     &-search-box {
       width: 90%;
       background-image: linear-gradient(rgba(255, 255, 255, 0.87) 0%, white 25%);
-      height: calc(180px);
+      height: 150px;
       box-shadow: 0 1px 3px 0 rgba(0,0,0,.25);
       border-radius: 6px;
       z-index: 20;
+
+      position: relative;
+      top: -60px;
+      display: block;
       @media only screen and (max-width :556px ) {
         opacity: 0;
         margin-top: -60px;
@@ -395,11 +400,11 @@
       width: 96%;
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-      margin-bottom: 120px;
+      margin-bottom: 40px;
     }
     &-intro {
       padding: 20px;
-      margin: 20px;
+      margin: -20px 20px 20px 20px;
       @include font-event-index-intro;
       @media only screen and (max-width :556px ) {
           opacity: 0;
@@ -499,9 +504,12 @@
         padding: 0 0 0 15px;
       }
       &-bookmark {
-        padding: 12px 10px 12px 20px;
+        padding: 12px 11px 11px 20px;
         transform: scale(.75);
+        box-sizing: border-box;
+        border-top: 1px solid rgb(239, 242, 245);
         border-left: 1px solid rgb(239, 242, 245);
+        border-bottom: 1px solid rgb(239, 242, 245);
         -webkit-text-stroke: 1px white;
       }
     }
